--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>الزمن من لحظة فوز المرشح عمر إدريس هيبه</title>
+  <title>Wow</title>
   <style>
     body {
       font-family: 'Tahoma', sans-serif;
